updated release script (allow Java > 15)